[tool.poetry]
name = "evhoops"
version = "0.1.0"
description = ""
authors = ["Calvin Min <Calvinjmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
joblib = "^1.4.2"
hoopstats = "^0.1.5"
httpx = "^0.27.2"
tqdm = "^4.66.6"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "uvicorn evhoops.main:app --reload --host 0.0.0.0 --port 8000"



